Fix word wrapping in language menu

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/app.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/app.component.scss
@@ -102,3 +102,7 @@ a {
 .active-locale {
   font-weight: bold;
 }
+
+.locale-menu .mdc-list-item {
+  white-space: nowrap;
+}
